# frp-benchmarks

./: .gitignore  .gitmodules  LICENSE  README.md  frp-benchmarks.cabal
benchmarks/: Main.hs
src/Benchmark/: Banana.hs  Euphoria.hs  Impulse.hs  Netwire.hs  Ordrea.hs  Sodium.hs
