name: frp-benchmarks
version: 0.0.0
-- synopsis: 
-- description: 
license: BSD3
license-file: LICENSE
-- author: 
-- maintainer: 
copyright: (C) 2012 Tsuru Capital
-- category: 
build-type: Simple
cabal-version: >=1.8

library
    hs-source-dirs: src
    build-depends:
          base < 5

        , containers
        , mwc-random
        , time

        , netwire         == 4.0.5
        , reactive-banana == 0.8.*
        , sodium          == 0.10.0.*
        , euphoria        == 0.4.8.0
        , ordrea          == 0.2.0.0
        , impulse         == 0.1.0.0
        , chronograph
        , thyme
        , vector-space

    ghc-options: -fno-state-hack
    exposed-modules:
        Benchmark.Netwire
        Benchmark.Banana
        Benchmark.Impulse
        Benchmark.Sodium
        Benchmark.Euphoria
        Benchmark.Ordrea

executable sodium-bench
    Main-is: src/Benchmark/Sodium.hs
    build-depends:
             frp-benchmarks
           , base
           , containers
           , mwc-random
           , time
           , sodium
           , thyme
           , vector-space
    ghc-options: -main-is Benchmark.Sodium
                 
executable euphoria-bench
    Main-is: src/Benchmark/Euphoria.hs
    build-depends:
             frp-benchmarks
           , base
           , containers
           , mwc-random
           , time
           , euphoria
    ghc-options: -main-is Benchmark.Euphoria

executable banana-bench
    Main-is: src/Benchmark/Banana.hs
    build-depends:
             frp-benchmarks
           , base
           , containers
           , mwc-random
           , time
           , reactive-banana
    ghc-options: -main-is Benchmark.Banana

executable impulse-bench
    Main-is: src/Benchmark/Impulse.hs
    build-depends:
             frp-benchmarks
           , base
           , containers
           , mwc-random
           , time
           , impulse
           , thyme
           , vector-space
    ghc-options: -main-is Benchmark.Impulse -rtsopts


executable ordrea-bench
    Main-is: src/Benchmark/Ordrea.hs
    build-depends:
             frp-benchmarks
           , base
           , containers
           , mwc-random
           , time
           , ordrea
    ghc-options: -main-is Benchmark.Ordrea -fno-state-hack

benchmark benchmarks
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchmarks
    build-depends:
          base < 5
        , criterion
        , frp-benchmarks

benchmark benchmarks-threaded
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchmarks
    ghc-options: -fno-state-hack -threaded
    build-depends:
          base < 5
        , criterion
        , frp-benchmarks
